--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,15 +7,36 @@
   margin: 0;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  height: 100vh;
+  overflow: auto;
+  scrollbar-width: none;
+}
+
 body {
   background: lightgray;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
+  min-height: 100vh;
+
+  position: relative;
+  padding-bottom: 50px;
 }
 
 main {
   padding-left: 1rem;
   padding-right: 1rem;
+  max-width: 1100px;
+  margin: 0 auto 1rem;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 header {
@@ -60,6 +81,10 @@ button {
   border: 0;
   padding: .5rem 1rem;
   font-size: 1rem;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .btn-group {
@@ -115,10 +140,60 @@ button {
   }
 }
 
+.row {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
+
+  .filter {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }  
+}
+
+.details {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: .5rem;
+    // flex: 1;
+    flex-basis: 50%;
+    padding: .5rem;
+
+    & p {
+      margin-top: 1rem;
+    }
+
+    hr {
+      margin: 1rem 0;
+    }
+  }
+}
+
+details {
+  & + & {
+    margin-top: .3rem;
+  }  
+  
+  & a {
+    text-decoration: none;
+    color: white;
+  }
+}
+
 .card {
   background: darkslategray;
   color: lightgray;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 50%;
 
   &+& {
     margin-top: 1rem;
@@ -133,6 +208,7 @@ button {
 
     @media print {
       margin-top: unset;
+      font-size: 1rem;
     }
 
     span {
@@ -143,6 +219,10 @@ button {
   &__body {
 
     details {
+
+      @media screen and (min-width: 768px) {
+        display: none;
+      }
 
       @media print {
         display: none;
@@ -180,6 +260,44 @@ button {
           margin-left: 1rem;
         }
       }
+    }
+  }
+}
+
+dialog {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  padding: 2rem .5rem;
+  position: relative;
+
+  .close {
+    position: absolute;
+    top: -1rem;
+    right: -1rem;
+    display: block;
+  }
+}
+
+footer {
+  background: lightslategray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 20px;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  .fa-heart {
+    color: red;
+  }
+
+  .hide-on-print {
+    @media print {
+      display: none;
     }
   }
 }
