Added social media assets

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -71,7 +71,7 @@ header {
   }
 
   .bg {
-    background: url('https://libertybarnchurch.com/wp-content/uploads/sites/9/2011/11/kids-reading-background.jpg') center center no-repeat;
+    background: url('../img/kids-reading-background.jpg') center center no-repeat;
     background-size: cover;
     height: 200px;
     margin-top: 2rem;
